# google-search

./: .gitignore  pyproject.toml  requirements.txt  result.html
vdex/: __init___.py  __main__.py  vdex.py
